1.3003  06.02.2011

    [ API CHANGES ]
    * Remove load_plugin from the core's DSL (was deprecated).

    [ BUG FIXES ]
    * Eliminate test warnings on Windows.
      (Gabor Szabo)
    * GH#271 - use correct VERSION_FROM in scaffolded application.
      (Sawyer X)
    * GH#260 - send_file doesn't clobber existing headers
      (Alexis Sukrieh)
    * logger unicode bugfix in the formated date
      (jahmed)
    * GH#281 - Don't crash if splat is used with no captures
      (David Precious)
    * Possible to given "template" a view name with the extenstion.
      (Alexis Sukrieh)
    
    [ ENHANCEMENTS ]
    * New setting log_path to allow for alternalte logging path in logger
      "file".
      (Natal Ngétal)
    * GH#289: Add more aliases on the ENV, provide more smart accessors to Plack env
      entries
      (Franck Cuny)
    

Dancer 1.3002

	[ API CHANGES ]
	
	* to_json and from_json accept options as hashref instead of hash.
	  Passing arguments as hash is deprecated 
	  (Franck Cuny).

	[ BUGFIXES ]

	* status is kept even when halt is used in a before filter
	  (Alexis Sukrieh)
        * Proper handling of temporary file creation using File::Temp module
          instead of homebrew solution. (jahmed)
        * Logger::Abstract unicode bug fix. (jahmed)
	
	[ ENHANCEMENTS ]

	* In development, pretty-print JSON serializations for easier development 
	  (Ask Bjørn Hansen)

Dancer 1.3001

	[ Flavio Poletti ]
	* Added "git fetch upstream" for remote tracking
	* turned a tab into the right number of spaces
	* Fix weird Plack error "status code needs to be an integer greater than
	  or equal to 100", because of a typo in a call to Dancer::Error
	  (Closes issue GH#264)

	[ Franck Cuny ]
	* uri_(un)escape cookie value; closes GH-248 
	* remove websocket tutorial (it has its own distro now)
	* add a new tests to make sure unknown templates produce a warning 
	* path for send_file must be relative from the public directory 